<resources>
    <string name="app_name">Guia1</string>


    <string name="titulo">Mi primera guía</string>

    //botones activy main
    <string name="btnCalculadora">Calculadora</string>
    <string name="btnLogin">Login</string>
    <string name="btnDatos">Datos</string>

    <string name="btnAC">AC</string>
    <string name="btnDEL">DEL</string>
    <string name="btnMas">+</string>
    <string name="btnMenos">-</string>

    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>
    <string name="btnMult">*</string>

    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btnDiv">/</string>

    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btnIgual">=</string>

    <string name="btn0">0</string>

</resources>